--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,13 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     // Firebase SKD
     implementation 'com.google.firebase:firebase-core:16.0.4'
+    // Firebase Auth
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    // Firebase real-time database
+    implementation 'com.google.firebase:firebase-database:16.0.3'
     implementation 'com.android.support:support-v4:28.0.0'
+    // ٍ Loading Dialog
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
